# fairsense-agentix

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_server.py  temp.py  test_highlighting_fix.py  test_vlm_manual.py
.github/workflows/: code_checks.yml  docs.yml  integration_tests.yml  publish.yml  stress_tests.yml  unit_tests.yml
acknowledgments/: index.html
api/: index.html
architecture/: index.html
config_troubleshooting/: index.html
configuration_guide/: index.html
data/indexes/rmf/: index.pkl
data/raw/: DATA_FORMAT.md  README.md
developers/: index.html
docs/: acknowledgments.md  api.md  architecture.md  config_troubleshooting.md  configuration_guide.md  developers.md  getting_started.md  index.md  server.md  user_guide.md
docs/stylesheets/: extra.css
examples/: launch_server.py
fairsense_agentix/: __init__.py  api.py  logging_config.py  schemas.py
fairsense_agentix/configs/: __init__.py  settings.py
fairsense_agentix/data/indexes/: risks_meta.json  rmf_meta.json
fairsense_agentix/data/indexes/risks/: index.faiss  index.pkl
fairsense_agentix/graphs/: __init__.py  bias_image_graph.py  bias_image_vlm_graph.py  bias_text_graph.py  orchestrator_graph.py  risk_graph.py  state.py
fairsense_agentix/graphs/bias_image/: __init__.py  build.py  nodes_analysis.py  nodes_extraction.py  spans.py  validation.py
fairsense_agentix/graphs/bias_image_vlm/: __init__.py  build.py  nodes.py
fairsense_agentix/graphs/bias_text/: __init__.py  build.py  nodes.py  routing.py  spans.py
fairsense_agentix/graphs/orchestrator/: __init__.py  build.py  decision_finalize.py  evaluation.py  execution.py  planning.py  routing.py
fairsense_agentix/graphs/risk/: __init__.py  build.py  nodes_output.py  nodes_retrieval.py
fairsense_agentix/graphs/state/: __init__.py  bias_image.py  bias_image_vlm.py  bias_text.py  orchestrator.py  risk.py
fairsense_agentix/prompts/: __init__.py  prompt_loader.py
fairsense_agentix/prompts/templates/: bias_analysis_v1.txt  bias_evaluator_v1.txt  bias_image_v1.txt  bias_text_v1.txt  bias_visual_analysis_v1.txt  summarize_v1.txt
fairsense_agentix/server/: README.md  __init__.py  launcher.py  launcher_health.py  launcher_ports.py  launcher_processes.py  launcher_troubleshooting.py
fairsense_agentix/server/launcher/: __init__.py  core.py  health.py  messages.py  processes.py
fairsense_agentix/service_api/: __init__.py  app_state.py  helpers.py  schemas.py  server.py  utils.py
fairsense_agentix/service_api/routes/: __init__.py  analyze.py  batch.py  health.py  stream.py
fairsense_agentix/services/: __init__.py  cache.py  evaluator.py  event_bus.py  router.py  telemetry.py
fairsense_agentix/services/evaluator/: __init__.py  bias.py  common.py  risk.py
fairsense_agentix/tools/: __init__.py  exceptions.py  fake.py  interfaces.py  registry.py
fairsense_agentix/tools/caption/: __init__.py  blip2_tool.py  blip_tool.py
fairsense_agentix/tools/embeddings/: __init__.py  langchain_embedder.py  sentence_transformer_embedder.py
fairsense_agentix/tools/faiss_index/: __init__.py  faiss_index_tool.py  langchain_faiss_tool.py
fairsense_agentix/tools/fake/: __init__.py  image.py  output.py  search.py  text.py
fairsense_agentix/tools/formatter/: __init__.py  highlight.py  html_formatter.py  tables.py
fairsense_agentix/tools/interfaces/: __init__.py  image.py  output.py  search.py  text.py
fairsense_agentix/tools/llm/: __init__.py  callbacks.py  langchain_adapter.py  output_schemas.py
fairsense_agentix/tools/ocr/: __init__.py  paddleocr_tool.py  tesseract_tool.py
fairsense_agentix/tools/persistence/: __init__.py  file_writer.py
fairsense_agentix/tools/resolvers/: __init__.py  caption.py  embedder.py  faiss_index.py  formatter.py  llm.py  ocr.py  persistence.py  summarizer.py  vlm.py
fairsense_agentix/tools/summarizer/: __init__.py  llm_summarizer.py
fairsense_agentix/tools/vlm/: __init__.py  fake_vlm_tool.py  output_schemas.py  unified_vlm_tool.py
getting_started/: index.html
scripts/: build_faiss_indexes.py  transform_mit_data.py
search/: search_index.json
server/: index.html
tests/: conftest.py  smoke_test_phase5_2.py  test_caption_tools.py  test_formatter_tools.py  test_ocr_tools.py  test_persistence_tools.py  test_server_launcher.py  test_summarizer_tools.py
tests/benchmarks/: README.md  __init__.py  benchmark_graphs.py
tests/fairsense-agentix/: conftest.py  test_bias_image_graph.py  test_bias_image_vlm_graph.py  test_bias_text_graph.py  test_cache.py  test_evaluator_service.py  test_faiss_index_tool.py  test_graph_integration.py  test_orchestrator_graph.py  test_phase2_integration.py  test_risk_graph.py  test_router.py  test_sanity.py  test_sentence_transformer_embedder.py  test_settings.py  test_state.py  test_telemetry.py  test_tool_registry.py
tests/fixtures/bias_text/: age_bias.txt  disability_bias.txt  gender_bias.txt  multiple_bias.txt  racial_bias.txt  socioeconomic_bias.txt
tests/fixtures/risk_assessment/: idea_1.txt
tests/stress/: __init__.py  test_stress_graphs.py
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs
ui/src/: App.tsx  Landing.tsx  api.ts  main.tsx  styles.css
user_guide/: index.html
