[project]
name = "fairsense-agentix"
version = "0.1.1"
description = "An agentic fairness and AI-risk analysis platform for detecting bias in text and images"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "langgraph>=0.2.56",
    "langchain-core>=0.3.0",
    # Phase 5.1: Embeddings + FAISS
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0,<2.6.0", # Cap at <2.6 due to manylinux_2_27 compatibility (server limitation)
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0", # For CSV handling in build script
    # Phase 5.2: LLM Adapters (LangChain-based)
    "langchain>=0.3.0", # Core LangChain functionality
    "langchain-openai>=0.2.0", # OpenAI/GPT-4 integration (brings openai as dependency)
    "langchain-anthropic>=0.2.0", # Anthropic/Claude integration (brings anthropic as dependency)
    "langchain-community>=0.3.0", # Community integrations (callbacks, cache, etc.)
    "tiktoken>=0.7.0,<0.12.0", # OpenAI tokenizer (constrain to version with prebuilt wheels)
    # Phase 5.3: OCR Tools
    "pytesseract>=0.3.10", # Tesseract OCR wrapper (CPU-friendly, 100+ languages)
    "paddleocr>=2.7.0", # PaddleOCR (GPU-accelerated, excellent accuracy)
    "pillow>=10.0.0", # Image processing (PIL, used by OCR and captioning)
    # Phase 5.3: Image Captioning
    "transformers>=4.35.0", # Hugging Face transformers (BLIP/BLIP-2 models)
    "accelerate>=0.20.0", # Fast model loading and inference
    # Phase 6.0: LangChain FAISS Refactor
    "langchain-huggingface>=0.1.0", # LangChain HuggingFace embeddings integration
    # Phase 9+: API + UI surface
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=15.0.1",
    # Beta: Programmatic server launcher
    "requests>=2.31.0", # For health checks in server launcher
]

[project.urls]
Homepage = "https://github.com/VectorInstitute/fairsense-agentix"
Documentation = "https://vectorinstitute.github.io/fairsense-agentix/"
Repository = "https://github.com/VectorInstitute/fairsense-agentix"
Issues = "https://github.com/VectorInstitute/fairsense-agentix/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "mypy>=1.20.0",
    "nbqa>=1.9.1",
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
]
docs = [
    "jinja2>=3.1.6", # Pinning version to address vulnerability GHSA-cpwx-vrp4-4pq7
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.15",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=1.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fairsense_agentix"]

[tool.hatch.build]
include = [
    "fairsense_agentix/**/*.py",
    "fairsense_agentix/data/**/*",
    "fairsense_agentix/prompts/templates/**/*.txt",
]


# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev", "docs"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
extra_checks = true

# Third-party wheels without types or stubs (ignore_missing_imports is false globally).
[[tool.mypy.overrides]]
module = ["faiss", "paddleocr", "pytesseract"]
ignore_missing_imports = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
exclude = []
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "ERA001", # Found commented-out code (too many false positives with math comments)
    "A001", # Ignore variable `input` is shadowing a Python builtin (common for torch)
    "A002", # Ignore variable `input` is shadowing a Python builtin in function (common for torch)
    "D301", # r-strings for docstrings with backslashes
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Ignoring undocumented public functions, public init, magic method, and magic numbers in tests folder
"tests/*" = ["D103", "D105", "D107", "PLC0415"]
# Allow lazy/conditional imports for performance and avoiding circular dependencies
"fairsense_agentix/graphs/*.py" = ["PLC0415"]
"fairsense_agentix/graphs/orchestrator/*.py" = ["PLC0415"]
"fairsense_agentix/graphs/bias_image/*.py" = ["PLC0415"]
"fairsense_agentix/graphs/bias_image_vlm/*.py" = ["PLC0415"]
"fairsense_agentix/graphs/bias_text/*.py" = ["PLC0415"]
"fairsense_agentix/graphs/risk/*.py" = ["PLC0415"]
"fairsense_agentix/tools/registry.py" = ["PLC0415"]
"fairsense_agentix/tools/resolvers/*.py" = ["PLC0415"]
"fairsense_agentix/tools/vlm/*.py" = ["PLC0415"]
"fairsense_agentix/tools/caption/*.py" = ["PLC0415"]


[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests (no models, no I/O, < 0.5s each)",
    "integration: Integration tests with fake tools (graphs, workflows)",
    "integration_test: marks tests as integration tests (deprecated, use 'integration')",
    "stress: Stress tests with extreme inputs (not run in CI)",
    "requires_models: Tests requiring real ML models (not run in CI)",
    "requires_api: Tests requiring API keys (not run in CI)",
    "slow: Tests taking > 1s (reviewed periodically)",
]

[tool.coverage]
    [tool.coverage.run]
    source=["fairsense_agentix"]
    omit=["tests/*", "*__init__.py"]
